# mahjonggstats

./: .gitignore  CHANGELOG.md  README.md  controller.go  controller_test.go  go.mod  go.sum  history.go  history.py  history_line.go  history_line_test.go  history_list.py  history_test.go  level_history.go  level_history_test.go  mahjonggstats  pyproject.toml  setup.py  test23.sh  testdata.go  view.go
cmd/: mahjonggstats.go  mahjonggstats_test.go  main.go
controller/: controller.go  controller_test.go
docs/: calltree.md
docs/plans/: toPython.md
mj/: __init__.py  history.py  history_line.py  history_list.py  level_history.py  main.py  record_list.py  test_history.py
mj/test/: test_history_format_time.py  test_history_str.py
model/: default_model.go  default_model_test.go  history.go  history_line.go  history_line_test.go  history_loader.go  history_test.go  level_history.go  level_history_test.go  model.go  testdata.go
python/: mahjonggstats  setup.py
python/mj/: history.py  level_history.py  main.py
python/tests/: __init__.py  test_history.py
src/mahjonggstats/: __init__.py  cli.py  controller.py  history.py  history_line.py  level_history.py  view.py
testdata/: history
tests/: __init__.py  conftest.py  test_cli.py  test_controller_view.py  test_history.py  test_history_format_time.py  test_history_line.py  test_history_list.py  test_history_str.py  test_history_timedate.py  test_level_history.py  test_main.py  test_main_exceptions.py  test_record_list.py
tests/domain/: test_history.py  (+3 more)
view/: default_view.go  default_view_test.go  view.go
(+19 files in other folders)
