[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjonggstats"
version = "4.1.1"
description = "Display statistics from Gnome Mahjongg history"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Converted from Go project"}]
dependencies = []

[project.scripts]
mahjonggstats = "mahjonggstats.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
